# web-scraping

./: README.md  adidas.csv  adidas.json  pyproject.toml  run.py
crawl/spiders/: adidas.py
