[tool.poetry]
name = "venturas-test"
version = "0.1.0"
description = ""
authors = ["Shapon Sheikh <shsheikhbd@gmail.com>"]
readme = "README.md"
packages = [{include = "venturas_test"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
